katars/tests/snaps/snapshots/snap_errors__use_after_free.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let raw = unsafe { mem.alloc(4) }\\nunsafe { mem.free(raw) }\\nunsafe { mem.read(raw, 0) }\")"
---
Error: use of deallocated memory
   ╭─[<test>:3:10]
   │
 3 │ unsafe { mem.read(raw, 0) }
   │          ────────┬───────  
   │                  ╰───────── use of deallocated memory
───╯
